Archive2/34/a81f4915ad4ee8/output
main.c: In function 'main':
main.c:15:5: error: unknown type name 'ABC'
     ABC abc;
     ^
main.c:16:5: error: unknown type name 'ABC'
     ABC def = abc;
     ^
