Archive2/34/a81f4915ad4ee8/main.cpp


struct ABC
{
    int a, b, c;
};


void foo(ABC) {}


int main(int argc, char** argv)
{
    
    ABC abc;
    ABC def = abc;
    
    foo(def);
}